--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: CI Checks
 
 on:
+  workflow_dispatch:
   pull_request:
     branches:
       - main
@@ -41,3 +42,4 @@ jobs:
 
       - name: Test build
         run: pnpm build
+
