--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,9 @@ on:
   push:
     tags:
       - 'v*.*.*'
+permissions:
+  id-token: write 
+  contents: read
 
 jobs:
   publish:
@@ -50,3 +53,4 @@ jobs:
             ```
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
