chore: add permissions section for workflow

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -12,6 +12,11 @@ on:
           - minor
           - major
 
+permissions:
+  contents: write
+  packages: write
+  id-token: write
+
 jobs:
   bump:
     runs-on: ubuntu-latest
