--- a/.github/workflows/update-and-publish.yml
+++ b/.github/workflows/update-and-publish.yml
@@ -1,4 +1,4 @@
-name: Bump Version
+name: Update and Publish
 
 on:
   workflow_dispatch:
@@ -18,9 +18,8 @@ permissions:
   id-token: write
 
 jobs:
-  bump:
+  update-and-publish:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -38,6 +37,7 @@ jobs:
         with:
           node-version: '20.x'
           cache: 'pnpm'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
@@ -46,20 +46,15 @@ jobs:
         id: bump
         run: |
           RELEASE_TYPE="${{ github.event.inputs.release-type }}"
-
           echo "Bumping version with type: $RELEASE_TYPE"
           NEW_VERSION=$(pnpm version $RELEASE_TYPE --no-git-tag-version | tail -n 1)
-
-          # Clean up possible "v" prefix from pnpm version output
           NEW_VERSION=${NEW_VERSION#v}
-
           echo "New version: $NEW_VERSION"
           echo "new-version=$NEW_VERSION" >> $GITHUB_OUTPUT
 
       - name: Commit and push changes
         run: |
           VERSION="${{ steps.bump.outputs.new-version }}"
-
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add package.json pnpm-lock.yaml
@@ -67,3 +62,26 @@ jobs:
           git tag "v$VERSION"
           git push origin HEAD
           git push origin "v$VERSION"
+
+      - name: Build package
+        run: pnpm build
+
+      - name: Publish to npm
+        run: pnpm publish --access public --no-git-checks
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ steps.bump.outputs.new-version }}
+          name: Release v${{ steps.bump.outputs.new-version }}
+          body: |
+            ## @cicerotcv/masker v${{ steps.bump.outputs.new-version }}
+
+            ### Installation
+            ```bash
+            pnpm add @cicerotcv/masker
+            ```
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
