--- a/package.json
+++ b/package.json
@@ -20,9 +20,17 @@
     "format",
     "utility"
   ],
-  "author": "Cicero Valentim",
+  "author": {
+    "name": "Cicero Valentim",
+    "email": "elm.tiago@gmail.com",
+    "url": "https://github.com/cicerotcv"
+  },
   "license": "MIT",
   "packageManager": "pnpm@10.13.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cicerotcv/masker.git"
+  },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "eslint": "^9.33.0",
